--- a/_posts/2013-01-21-lesson-2.md
+++ b/_posts/2013-01-21-lesson-2.md
@@ -6,8 +6,9 @@ category: art, beginning
 tags: [learning, sketch, lesson]
 ---
 {% include JB/setup %}
-<p>Things are getting more advanced. Since the last lesson (upside-down drawings), there was one short exercise to recall my own "Childhood Landscape".</p><img src="/assets/images/recalled_childhood_landscape_sm.jpg" alt="Recalled Childhood Landscape" class="img-right"/>
-<p>And then the fun with the Picture Plane began. These were fun and quick, so I did a few of them.</p>
+<p>Things are getting more advanced. Since the last lesson (upside-down drawings), there was one short exercise to recall my own "Childhood Landscape".</p>
+<img src="/assets/images/recalled_childhood_landscape_sm.jpg" alt="Recalled Childhood Landscape" class="img-left"/>
+<p>And then I began using the Picture Plane. These were fun and quick, so I did a few of them.</p>
 <img src="/assets/images/hand1_sm.jpg" alt="hand on picture plane" class="img-left"/>
 <img src="/assets/images/hand2_sm.jpg" alt="hand on picture plane" class="img-left"/>
 <img src="/assets/images/hand3_sm.jpg" alt="hand on picture plane" class="img-left"/>
