--- a/_posts/2013-01-21-lesson-2.md
+++ b/_posts/2013-01-21-lesson-2.md
@@ -14,5 +14,5 @@ tags: [learning, sketch, lesson]
 <img src="/assets/images/hand3_sm.jpg" alt="hand on picture plane" class="img-left"/>
 <img src="/assets/images/hand4_sm.jpg" alt="hand on picture plane" class="img-left"/>
 <img src="/assets/images/hand4_1_sm.jpg" alt="hand on picture plane" class="img-left"/>
-<p class="clear-both">The last one I re-drew as a sketch.</p>
+<p>The last one I re-drew as a sketch.</p>
 <img src="/assets/images/hand4_final_sm.jpg" alt="hand on picture plane" class="img-left"/>
