change 'art, beginning' category to 'art'

--- a/_posts/2013-01-21-lesson-2.md
+++ b/_posts/2013-01-21-lesson-2.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Lesson 2"
 description: "Some more advanced drawings"
-category: art, beginning
+category: art
 tags: [learning, sketch, lesson]
 ---
 {% include JB/setup %}
